@@ -39,6 +39,8 @@ SEXP R_igraph_vector_to_SEXP(igraph_vector_t *v);
 SEXP R_igraph_matrix_to_SEXP(igraph_matrix_t *m);
 SEXP R_igraph_strvector_to_SEXP(const igraph_strvector_t *m);
 SEXP R_igraph_to_SEXP(igraph_t *graph);
+SEXP R_igraph_vectorlist_to_SEXP(const igraph_vector_ptr_t *ptr);
+void R_igraph_vectorlist_destroy(igraph_vector_ptr_t *ptr);
 
 int R_igraph_SEXP_to_strvector(SEXP rval, igraph_strvector_t *sv);
 int R_igraph_SEXP_to_strvector_copy(SEXP rval, igraph_strvector_t *sv);
@@ -1025,6 +1027,31 @@ SEXP R_igraph_to_SEXP(igraph_t *graph) {
   
   UNPROTECT(1);
   return result;
+}
+
+SEXP R_igraph_vectorlist_to_SEXP(const igraph_vector_ptr_t *ptr) {
+  SEXP result;
+  long int i, n=igraph_vector_ptr_size(ptr);
+  
+  PROTECT(result=NEW_LIST(n));
+  for (i=0; i<n; i++) {
+    igraph_vector_t *v=VECTOR(*ptr)[i];
+    SET_VECTOR_ELT(result, i, R_igraph_vector_to_SEXP(v));
+  }
+  
+  UNPROTECT(1);
+  return result;
+}
+
+void R_igraph_vectorlist_destroy(igraph_vector_ptr_t *ptr) {
+  long int i, n=igraph_vector_ptr_size(ptr);
+  
+  for (i=0; i<n; i++) {
+    igraph_vector_t *v=VECTOR(*ptr)[i];
+    igraph_vector_destroy(v);
+    igraph_free(v);
+  }
+  igraph_vector_ptr_destroy(ptr);
 }
 
 int R_igraph_SEXP_to_strvector(SEXP rval, igraph_strvector_t *sv) {
@@ -7814,6 +7841,97 @@ SEXP R_igraph_revolver_p_p(SEXP graph, SEXP pniter, SEXP pvtime, SEXP petime,
   UNPROTECT(2);
   return result;
 }		   
+
+/*-------------------------------------------/                                  
+/ igraph_biconnected_components              /                                  
+/-------------------------------------------*/
+SEXP R_igraph_biconnected_components(SEXP graph) {
+                                        /* Declarations */
+  igraph_t c_graph;
+  igraph_integer_t c_no;
+  igraph_vector_ptr_t c_components;
+  igraph_vector_t c_articulation_points;
+  SEXP no;
+  SEXP components;
+  SEXP articulation_points;
+  int c_result;
+  SEXP result, names;
+
+  R_igraph_before();
+                                        /* Convert input */
+  R_SEXP_to_igraph(graph, &c_graph);
+  if (0 != igraph_vector_ptr_init(&c_components, 0)) {
+  igraph_error("", __FILE__, __LINE__, IGRAPH_ENOMEM);
+  }
+  IGRAPH_FINALLY(R_igraph_vectorlist_destroy, &c_components);
+  if (0 != igraph_vector_init(&c_articulation_points, 0)) {
+  igraph_error("", __FILE__, __LINE__, IGRAPH_ENOMEM);
+  }
+  IGRAPH_FINALLY(igraph_vector_destroy, &c_articulation_points);
+                                        /* Call igraph */
+  c_result=igraph_biconnected_components(&c_graph, &c_no, &c_components, &c_art\
+iculation_points);
+
+                                        /* Convert output */
+  PROTECT(result=NEW_LIST(3));
+  PROTECT(names=NEW_CHARACTER(3));
+  PROTECT(no=NEW_NUMERIC(1));
+  REAL(no)[0]=c_no;
+  PROTECT(components=R_igraph_vectorlist_to_SEXP(&c_components));
+  R_igraph_vectorlist_destroy(&c_components);
+  IGRAPH_FINALLY_CLEAN(1);
+  PROTECT(articulation_points=R_igraph_vector_to_SEXP(&c_articulation_points));\
+
+  igraph_vector_destroy(&c_articulation_points);
+  IGRAPH_FINALLY_CLEAN(1);
+  SET_VECTOR_ELT(result, 0, no);
+  SET_VECTOR_ELT(result, 1, components);
+  SET_VECTOR_ELT(result, 2, articulation_points);
+  SET_STRING_ELT(names, 0, CREATE_STRING_VECTOR("no"));
+  SET_STRING_ELT(names, 1, CREATE_STRING_VECTOR("components"));
+  SET_STRING_ELT(names, 2, CREATE_STRING_VECTOR("articulation_points"));
+  SET_NAMES(result, names);
+  UNPROTECT(4);
+
+  R_igraph_after();
+
+  UNPROTECT(1);
+  return(result);
+}
+
+/*-------------------------------------------/                                  
+/ igraph_articulation_points                 /                                  
+/-------------------------------------------*/
+SEXP R_igraph_articulation_points(SEXP graph) {
+                                        /* Declarations */
+  igraph_t c_graph;
+  igraph_vector_t c_res;
+  SEXP res;
+  int c_result;
+  SEXP result, names;
+
+  R_igraph_before();
+                                        /* Convert input */
+  R_SEXP_to_igraph(graph, &c_graph);
+  if (0 != igraph_vector_init(&c_res, 0)) {
+  igraph_error("", __FILE__, __LINE__, IGRAPH_ENOMEM);
+  }
+  IGRAPH_FINALLY(igraph_vector_destroy, &c_res);
+                                        /* Call igraph */
+  c_result=igraph_articulation_points(&c_graph, &c_res);
+
+                                        /* Convert output */
+  PROTECT(res=R_igraph_vector_to_SEXP(&c_res));
+  igraph_vector_destroy(&c_res);
+  IGRAPH_FINALLY_CLEAN(1);
+  result=res;
+
+  R_igraph_after();
+
+  UNPROTECT(1);
+  return(result);
+}
+
 			 
 /***********************************************/
 /* THE REST IS GENERATED BY inger.py           */
